--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
     "faker": "^5.5.3",
     "json-server": "^0.16.3",
     "lodash": "^4.17.21"
